<resources>
    <string name="app_name">AndroidGistWithKotlin</string>
    <string name="menu_title">Menu Title</string>
    <string name="menu_description">Menu Description</string>
    <string name="this_is_top_fragment">This is top fragment</string>
    <string name="this_is_bottom_fragment">This is bottom fragment</string>
    <string name="change_bottom_fragment">Change bottom fragment</string>
    <string name="this_is_another_bottom_fragment">This is another fragment</string>
    <string name="this_is_another_top_fragment">This is another top fragment</string>
    <string name="this_text_in_main_activity">This is text in Activity</string>
    <string name="talk_to_bottom_fragment">Talk to Bottom Fragment</string>
    <string name="talk_to_top_fragment">Talk to Top Fragment</string>
    <string name="talk_to_activity">Talk to Activity</string>
    <string name="plus_one">Plus One</string>
    <string name="clear">Clear</string>
    <string name="changeUserName">Change User Name</string>
    <string name="changeUserId">Change User Id</string>
    <string name="logcat_prompt">请通过Logcat查看感知生命周期变化的日志</string>
    <string name="send_request_with_http_url_connection">Send Request With HTTPURLConnection</string>
    <string name="send_request_with_http_url_connection_and_callback">Send Request With HTTPURLConnection and CallBack</string>
    <string name="send_request_with_ok_http">Send Request With OkHttp</string>
    <string name="send_request_with_ok_http_and_callback">Send Request With OkHttp and CallBack</string>
    <string name="send_request_with_retrofit">Send Request With Retrofit</string>
    <string name="send_request_with_coroutine">Send Request With Coroutine</string>
    <string name="launch_from_globalscope">Launch from GlobalScope</string>
    <string name="launch_from_mainscope">Launch from MainScope</string>
    <string name="unit_test_get_string">This string is for unit test purpose</string>
    <string name="music_fragment">Music fragment</string>
    <string name="music">Music</string>
    <string name="video">Video</string>
    <string name="people">People</string>
    <string name="video_fragment">Video fragment</string>
    <string name="click_me">Click me</string>
</resources>