<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_red_light"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        android:id="@+id/bottomFragmentMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/this_is_bottom_fragment"
        android:textSize="24sp" />

    <Button
        android:id="@+id/talkToActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/talk_to_activity" />

    <Button
        android:id="@+id/talkToTopFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/talk_to_top_fragment" />

</LinearLayout>