<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragment.FragmentDemoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/holo_green_light"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/activityMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_green_light"
            android:gravity="center"
            android:text="@string/this_text_in_main_activity"
            android:textSize="24sp" />

        <Button
            android:id="@+id/talkToTopFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/talk_to_top_fragment" />

        <Button
            android:id="@+id/talkToBottomFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/talk_to_bottom_fragment" />

    </LinearLayout>

    <fragment
        android:id="@+id/topFragmentInCommunication"
        android:name="com.github.crazygit.demo.androidgistwithkotlin.ui.fragment.TopCommunicationFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <fragment
        android:id="@+id/bottomFragmentInCommunication"
        android:name="com.github.crazygit.demo.androidgistwithkotlin.ui.fragment.BottomCommunicationFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />


</LinearLayout>